# jitialize

./: .gitmodules  .travis-old.yml  CMakeLists.txt  CMakeTests.txt  Dockerfile  README.md  example.cpp  setup.sh
benchmark/: CMakeLists.txt  benchmark.cpp
cmake/: CMakeLists.txt  JitializeConfig.cmake.in  Python.cmake
doc/readme/: CMakeLists.txt  README.md.in  camfilter.cpp  update_doc.sh
docker/: Dockerfile
docker/scripts/: build.sh
example/: CMakeLists.txt  camfilter.cpp
include/: CMakeLists.txt
include/easy/: function_wrapper.h  jit.h
include/jitialize/: attributes.h  code_cache.h  exceptions.h  function_wrapper.h  jit.h  meta.h  options.h  param.h
include/jitialize/runtime/: BitcodeTracker.h  Context.h  Function.h  LLVMHolder.h  LLVMHolderImpl.h  RuntimePasses.h  Utils.h
pass/: CMakeLists.txt  Jitialize.cpp  Layout.cpp  MayAliasTracer.cpp  MayAliasTracer.h  RegisterPasses.cpp  StaticPasses.h
runtime/: BitcodeTracker.cpp  CMakeLists.txt  Context.cpp  Function.cpp  Utils.cpp
runtime/pass/: ContextAnalysis.cpp  DevirtualizeConstant.cpp  InlineParameters.cpp  InlineParametersHelper.cpp  InlineParametersHelper.h
tests/: benchmark.test  example.test  lit.cfg.in
tests/doc/: lit.cfg.in
tests/install/: CMakeLists.txt  test.cpp
tests/meta/: bad_signature_a.cpp  bad_signature_b.cpp  bad_signature_c.cpp  new_func_traits.cpp  type_list+func_traits.cpp
tests/simple/: cache.cpp  compose_bad.cpp  compose_ptr.cpp  compose_ref.cpp  custom_key_cache.cpp  devirtualization.cpp  devirtualization_nohint.cpp  double_a.cpp  exception_a.cpp  float_a.cpp  fun_ptr_a.cpp  fun_ptr_b.cpp  fun_ptr_c.cpp  fun_ptr_d.cpp  fun_ptr_e.cpp  fun_ptr_f.cpp  int_a.cpp  int_ptr_a.cpp  long_a.cpp  multi_file+regexp.cpp  nortti_a.cpp  opt_level.cpp  ptr_a.cpp  serialize.cpp  serialize_multifile.cpp  serialize_static.cpp  small_struct.cpp  static_var_a.cpp  static_var_b.cpp  struct_arg.cpp  struct_return.cpp  thread.cpp  unroll.cpp
